<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
         android:id="@+id/message"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dip" />
    <TextView
	     android:text="@string/login_activity_username_label"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
    />
    <EditText
        android:id="@+id/username_field"
        android:text="@string/username"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:scrollHorizontally="true"
	    android:singleLine="true"
    />
    <TextView
	     android:text="@string/login_activity_password_label"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="12dp"
    />
    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/password"
	    android:gravity="center"
	    android:scrollHorizontally="true"
	    android:singleLine="true"
	    android:password="true"
	    android:inputType="textPassword"
    />
    <TextView
	     android:text="@string/api_key_text"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="12dp"
    />
    <EditText
        android:id="@+id/api_key_field"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:scrollHorizontally="true"
	    android:singleLine="true"
	    android:text="@string/api_key"
    />
 	<Button
		android:id="@+id/login_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:minWidth="100dip"
		android:text="@string/login"
    />

</LinearLayout>