<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <ImageView
	    android:id="@+id/image"
	    android:layout_width="50dip"
	    android:layout_height="50dip"
	    android:src="@drawable/ic_launcher"
	    android:contentDescription="@drawable/ic_launcher"/>
   
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_marginRight="5dip"
        android:orientation="vertical"
        android:gravity="top">

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="top"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/title"
	            android:textSize="20sp" />
	    </LinearLayout>
	    
         <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="top"
	        android:orientation="horizontal" >
			<TextView
	            android:id="@+id/label_release_date"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/release_date"
	            android:layout_marginRight="5dip"/>
	        <TextView
	            android:id="@+id/release_date"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	             />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" 
	        android:gravity="top">
			<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:gravity="center_vertical"
	            android:text="@string/title_vote_average" />
	        <TextView
	            android:id="@+id/vote_average"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical"
	            />
	    </LinearLayout>
	    
	</LinearLayout>
	
</LinearLayout>